2008-11-06  Sam Steingold  <sds@gnu.org>

	* macro8.tst: check unused function warnings

2008-10-28  Sam Steingold  <sds@gnu.org>

	* path.tst: add 2 tests for bug #[ 2198109 ]:
	LOAD-LOGICAL-PATHNAME-TRANSLATIONS confuses "many" and "one"
	when *LOAD-PATHS* is wild

2008-10-16  Sam Steingold  <sds@gnu.org>

	* symbol10.tst: check keyword reading

2008-09-17  Sam Steingold  <sds@gnu.org>

	* tests.lisp (cmd-args): new function
	* ext-clisp.tst (ext:run-program): use it;
	avoid the potential of a dotted result list which breaks PRETTY-COMPARE
	* modules/syscalls/test.tst: use CMD-ARGS and starting *PROC1* & *PROC2*

2008-09-11  Sam Steingold  <sds@gnu.org>

	* ext-clisp.tst: test ARGV, RUN-PROGRAM, and EXIT

2008-08-12  Sam Steingold  <sds@gnu.org>

	* alltest.tst: add tests for LISP-IMPLEMENTATION-TYPE,
	LISP-IMPLEMENTATION-VERSION, MACHINE-INSTANCE, MACHINE-TYPE,
	MACHINE-VERSION

2008-08-11  Sam Steingold  <sds@gnu.org>

	* ffi.tst: fix the gethostname=machine-instance case for systems
	where gethostbyname(gethostname) /= gethostname (NetBSD 4.99.72 i386)
	Reported by Aleksej Saushev <asau@inbox.ru>

2008-08-10  Sam Steingold  <sds@gnu.org>

	* path.tst (test-weird-pathnames): work around systems which only
	accept ASCII pathnames (e.g., OSX PPC 10.4.11 (Darwin 8.11.0))

2008-08-09  Sam Steingold  <sds@gnu.org>

	* streams.tst: fix tests for the 2008-08-06 FILL-STREAM change;
	use symbol-cleanup

2008-08-05  Sam Steingold  <sds@gnu.org>

	* ext-clisp.tst: many *REOPEN-OPEN-FILE* tests

2008-07-30  Sam Steingold  <sds@gnu.org>

	* ext-clisp.tst (check-load): test wildcards in *load-paths*

2008-07-30  Sam Steingold  <sds@gnu.org>

	* tests.lisp (kill-down): kill files at all levels down
	(rmrf): kill directories at all levels down

2008-07-27  Sam Steingold  <sds@gnu.org>

	* hashtable.tst: test support for circular keys

2008-07-24  Sam Steingold  <sds@gnu.org>

	* eval20.tst: add tests based on ansi-tests eval-when.15 & eval-when.17
